# test_task_stripe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  readme.md
.github/workflows/: action.yaml
fixtures/: items.json
payments/: admin.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py
templates/: cancel.html  item.html  items.html  success.html
test_task_stripe/: asgi.py  settings.py  urls.py  wsgi.py
