[tool.poetry]
name = "test-task-stripe"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_stripe"}]

[tool.poetry.dependencies]
python = "^3.10"
stripe = "^5.1.1"
django = "^4.1.6"
pre-commit = "^3.0.4"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
